<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/keyboard_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/accent_100"
        android:elevation="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_accent_tonal_v2"
                android:src="@drawable/ic_send"
                android:contentDescription="@string/btn_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="message"
                android:background="@drawable/btn_accent_tonal_selector_v5"
                android:ems="10"
                android:hint="@string/hint_message"
                android:inputType="text|textMultiLine"
                android:isScrollContainer="true"
                android:maxHeight="120dp"
                android:paddingLeft="12dp"
                android:paddingTop="13dp"
                android:paddingRight="12dp"
                android:paddingBottom="13dp"
                android:textColorHint="@color/accent_500"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_accent_tonal_v2"
                android:elevation="0.02dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_micro"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_accent_tonal_v2"
                android:clickable="true"
                android:contentDescription="@string/btn_speak"
                android:elevation="0.01dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_microphone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/chat_activity_title"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/accent_100"
        android:elevation="6dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="24dp"
        android:paddingEnd="120dp"
        android:textColor="@color/text_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_accent_tonal_v4"
        android:contentDescription="@string/btn_settings"
        android:tooltipText="@string/btn_settings"
        android:elevation="6.01dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <ImageButton
        android:id="@+id/btn_export"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_accent_tonal_v4"
        android:contentDescription="@string/btn_export_chat"
        android:elevation="6.01dip"
        android:tooltipText="@string/btn_export_chat"
        app:layout_constraintEnd_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_upload" />

    <ListView
        android:id="@+id/messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toTopOf="@+id/keyboard_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_activity_title" />
</androidx.constraintlayout.widget.ConstraintLayout>